<resources>
    <string name="app_name">Dear Dairy</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="greeting_text">Dear %1$s</string>
</resources>