<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LoginSignupBackground">


    <EditText
        android:id="@+id/fullNameTextView"
        style="@style/InputBoxStyle"
        android:layout_marginBottom="30dp"
        android:autofillHints="Full Name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/emailTextView"
        style="@style/InputBoxStyle"
        android:layout_marginBottom="30dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />

    <EditText
        android:id="@+id/passwordTextView"
        style="@style/InputBoxStyle"
        android:layout_marginBottom="30dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/re_passwordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <EditText
        android:id="@+id/re_passwordTextView"
        style="@style/InputBoxStyle"
        android:layout_marginBottom="30dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_design"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_passwordTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>